# Haskell-Blockchain-Tutorial

./: CHANGELOG.md  blockchain-tutorial.cabal
.github/workflows/: haskell.yml
data/: keys.json
src/: BCEnv.hs  BCHashable.hs  BCShow.hs  Block.hs  BlockHeader.hs  Main.hs  Transaction.hs
src/Class/: BCHashable.hs  BCShow.hs
src/Model/: BCEnv.hs  Block.hs  BlockHeader.hs  Transaction.hs  Wallet.hs
src/Workflow/: LoadEnv.hs  Mine.hs
test/: Spec.hs
