cabal-version:      2.4
name:               blockchain-tutorial
version:            0.1.0.0

synopsis: A simple blockchain toy example
description:
    A blockchain example following a tutorial at the Introduction to Distributed
    Ledgers module at Imperial College London.
bug-reports:        https://github.com/MMZK1526/doc-jan-haskell/issues
-- license:
author:             mmzk1526
maintainer:         yc4120@ic.ac.uk

extra-source-files:
    CHANGELOG.md
    data/blockchain.json
    data/keys.json
    data/mempool.json

executable tutorial1
    main-is:          Main.hs
    other-modules:
        BCHashable
        BCEnv
        BCShow
        Block
        BlockHeader
        Transaction
    default-extensions:
        DataKinds
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DefaultSignatures
        FlexibleContexts
        FlexibleInstances
        InstanceSigs
        TypeApplications
        TypeOperators
        UndecidableInstances
    build-depends:
        aeson >= 2.2.1 && < 2.3,
        base ^>=4.17.2.0,
        bytestring >= 0.11.5 && < 0.12,
        cryptohash-sha256 >= 0.11.102 && < 0.12,
    hs-source-dirs:   src
    default-language: Haskell2010
